# NUS-Fintech-Asset-Recommender

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.gradio/flagged/: dataset1.csv
initialize_db/: asset_information.csv  load_data.sql
initialize_db/raw/: customer_information.csv  limit_prices.csv  markets.csv  questionnaires.csv
src/: ALSModel.ipynb  EDA_data_cleaning.ipynb  Feature_Engineering.ipynb  Neural Collaborative Filtering.ipynb  TensorFlowTwoTowers.ipynb  TransactionsBasicModels.ipynb  gemini_add_metadata.ipynb  train_test_split.ipynb
src/app/: Neural_Collaborative_Filtering-4.ipynb  app.py  functions.py  neumf.py
src/preprocess/: prepare_csvs_for_supabase.py
