[project]
name = "nus-fintech-asset-recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "yjiahao",email = "yjiahao123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (==1.26.4)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "gradio (>=5.49.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
