[project]
name = "nus-fintech-asset-recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "yjiahao",email = "yjiahao123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "gradio (>=5.49.1,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "torch (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
